# basis_universal

./: CMakeLists.txt  basisu.vcxproj  basisu.vcxproj.filters
cmake/: Config.cmake.in
encoder/: CMakeLists.txt  basisu_comp.cpp  basisu_enc.cpp
tool/: CMakeLists.txt  basisu_tool.cpp
transcoder/: CMakeLists.txt
