file(GLOB BASISU_TRANSCODER_HDRS ${CMAKE_CURRENT_SOURCE_DIR}/*.h ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
file(GLOB BASISU_TRANSCODER_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

add_library(basisu_transcoder ${BASISU_TRANSCODER_SRCS} ${BASISU_TRANSCODER_HDRS})
target_include_directories(basisu_transcoder
    PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
    $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/..>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)

install(TARGETS basisu_transcoder
    LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
    ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
    RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}")
install(FILES ${BASISU_TRANSCODER_HDRS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
