file(GLOB BASISU_TRANSCODER_HDRS ${CMAKE_CURRENT_SOURCE_DIR}/*.h ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
file(GLOB BASISU_TRANSCODER_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

add_library(basisu_transcoder ${BASISU_TRANSCODER_SRCS} ${BASISU_TRANSCODER_HDRS})
target_include_directories(basisu_transcoder
    PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/..>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}>)

target_compile_definitions(basisu_transcoder PUBLIC "$<$<CONFIG:DEBUG>:_DEBUG>")

install(TARGETS basisu_transcoder
    EXPORT "${TARGETS_EXPORT_NAME}"
    INCLUDES DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}"
    LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
    ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
    RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}")
install(FILES ${BASISU_TRANSCODER_HDRS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}/transcoder)
